// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown can focus dropdown and select option 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        />
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown closes options when clicking outside 1`] = `
<DocumentFragment>
  .c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 7;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 0px solid transparent;
  border-bottom-right-radius: 0rem;
  border-bottom-left-radius: 0rem;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c5 {
  background: white;
  position: absolute;
  top: 100%;
  left: 0px;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 1px solid #252c35;
  border-top: 0px solid transparent;
  border-radius: 0rem 0rem 0.25rem 0.25rem;
  z-index: 1000;
}

.c6 {
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #252c35;
  background-color: transparent;
}

.c6:hover {
  background-color: #e5e5e5;
  cursor: pointer;
  outline: none;
}

.c6:focus {
  outline: none;
  background-color: #e5e5e5;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        />
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
    <div
      class="sc-AxjAm c5"
      color="#252c35"
    >
      <div
        class="sc-AxjAm c6"
        color="#252c35"
        id="choosePokemon-option-bulbasaur"
        tabindex="0"
      >
        <span
          class="sc-AxiKw "
        >
          Bulbasaur
        </span>
      </div>
      <div
        class="sc-AxjAm c6"
        color="#252c35"
        id="choosePokemon-option-charmander"
        tabindex="0"
      >
        <span
          class="sc-AxiKw "
        >
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm c6"
        color="#252c35"
        id="choosePokemon-option-squirtle"
        tabindex="0"
      >
        <span
          class="sc-AxiKw "
        >
          Squirtle
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown closes options when clicking outside 2`] = `
<DocumentFragment>
  .c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        />
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Dropdown deselects option when clicking on them twice when dropdown is multi 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        />
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown displays all options when focused 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 7;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 0px solid transparent;
  border-bottom-right-radius: 0rem;
  border-bottom-left-radius: 0rem;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c5 {
  background: white;
  position: absolute;
  top: 100%;
  left: 0px;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 1px solid #252c35;
  border-top: 0px solid transparent;
  border-radius: 0rem 0rem 0.25rem 0.25rem;
  z-index: 1000;
}

.c6 {
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #252c35;
  background-color: transparent;
}

.c6:hover {
  background-color: #e5e5e5;
  cursor: pointer;
  outline: none;
}

.c6:focus {
  outline: none;
  background-color: #e5e5e5;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        />
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
    <div
      class="sc-AxjAm c5"
      color="#252c35"
    >
      <div
        class="sc-AxjAm c6"
        color="#252c35"
        id="choosePokemon-option-bulbasaur"
        tabindex="0"
      >
        <span
          class="sc-AxiKw "
        >
          Bulbasaur
        </span>
      </div>
      <div
        class="sc-AxjAm c6"
        color="#252c35"
        id="choosePokemon-option-charmander"
        tabindex="0"
      >
        <span
          class="sc-AxiKw "
        >
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm c6"
        color="#252c35"
        id="choosePokemon-option-squirtle"
        tabindex="0"
      >
        <span
          class="sc-AxiKw "
        >
          Squirtle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown displays placeholder value on initial render 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        >
          Choose a pokemon
        </span>
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown does not display options on initial render 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c3 {
  font-size: 1rem;
  color: undefined;
  opacity: 0.8;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span
          class="sc-AxiKw sc-fzqNqU c3"
          data-test-id="hsui-Text"
        />
      </div>
      <div
        class="sc-AxjAm c4"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders a value when given a matching option id through props 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="sc-AxjAm c3"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders no value when given a value that doesn't match any option id 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      />
      <div
        class="sc-AxjAm c3"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders one value when given two values but only one matches an option id 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="sc-AxjAm c3"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders two values when given matching option ids through props 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span>
          Bulbasaur
        </span>
        <span>
          , 
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm c3"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders two values when given matching option ids through props when multi is set to true 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span>
          Bulbasaur
        </span>
        <span>
          , 
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm c3"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown selects options from values prop 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0));
  position: relative;
  z-index: 1;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0));
  outline: 0 none;
  border: 1px solid #252c35;
  cursor: pointer;
  background-color: transparent;
  color: #252c35;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:active {
  background-color: rgba(0,0,0,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="button"
    >
      <div
        class="sc-AxjAm c2"
      >
        <span>
          Bulbasaur
        </span>
        <span>
          , 
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm c3"
      >
        <svg
          role="presentation"
          style="width: 1.25em; height: 1.25em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
